--- a/integrations/scraping-cuenca-duero/package.json
+++ b/integrations/scraping-cuenca-duero/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "type": "module",
   "exports": "./src/index.ts",
-  "devDependencies": {},
   "scripts": {
     "start": "tsx --watch ./src/console-runner.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "axios": "^1.11.0",
+    "cheerio": "^1.1.2"
   }
 }
