eat(integration): Add Duero scraper with data filtering

--- a/integrations/scraping-cuenca-duero/package.json
+++ b/integrations/scraping-cuenca-duero/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lemoncode/scraping-cuenca-duero",
+  "name": "scraping-cuenca-duero",
   "version": "1.0.0",
   "private": true,
   "type": "module",
