--- a/integrations/scraping-cuenca-duero/package.json
+++ b/integrations/scraping-cuenca-duero/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "axios": "^1.11.0",
     "cheerio": "^1.1.2"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
