--- a/integrations/scraping-cuenca-duero/tsconfig.json
+++ b/integrations/scraping-cuenca-duero/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Node",
     "skipLibCheck": true,
     "isolatedModules": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "outDir": "dist",
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
