refactor: migrate from db-model to @embalse-info/db
- Updated package.json files across integrations to replace db-model with @embalse-info/db.
- Added new MongoDB dependency in arcgis integration.
- Refactored import statements in various integration files to use the new @embalse-info/db package.
- Removed the db-model package and its related files.
- Introduced a new db package with MongoDB connection setup and data access layers for cuencas and embalses.
- Added Docker configuration for MongoDB in the new db package.

--- a/integrations/arcgis/package.json
+++ b/integrations/arcgis/package.json
@@ -10,7 +10,8 @@
     "start": "tsx --watch src/console-runner.ts"
   },
   "dependencies": {
-    "db-model": "^1.0.0",
-    "axios": "^1.7.0"
+    "@embalse-info/db": "^0.0.1",
+    "axios": "^1.7.0",
+    "mongodb": "^6.19.0"
   }
 }
