--- a/integrations/scraping-cuenca-jucar/package.json
+++ b/integrations/scraping-cuenca-jucar/package.json
@@ -10,6 +10,6 @@
     "start": "tsx --watch src/console-runner.ts"
   },
   "dependencies": {
-    "db-model": "^1.0.0"
+    "@embalse-info/db": "^0.0.1"
   }
 }
