--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "workspaces": [
     "packages/*",
     "integrations/*",
-    "functions/*",
+    "functions",
     "front"
   ],
   "packageManager": "npm@10.0.0",
