--- a/functions/package.json
+++ b/functions/package.json
@@ -1,21 +1,22 @@
 {
   "name": "functions",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rimraf dist",
-    "prestart": "npm run clean && npm run build && sh ./create-dev-env.sh",
+    "prestart": "npm run clean && npm run build",
     "start": "func start"
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.0.0",
+    "@embalse-info/db": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.x",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
+    "rimraf": "^5.0.0",
+    "typescript": "^4.0.0"
   },
-  "main": "dist/src/index.js"
+  "main": "dist/index.js"
 }
