--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,17 +4,25 @@
   "private": true,
   "type": "module",
   "imports": {
-    "#*": "./src/*"
+    "#*": "./dist/*"
   },
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./dist/index.js"
   },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
+    "clean": "rimraf dist",
     "prestart:db": "docker compose down --remove-orphans",
     "start:db": "docker compose up -d",
     "type-check": "tsc --noEmit --preserveWatchOutput"
   },
   "dependencies": {
     "mongodb": "^6.19.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0",
+    "rimraf": "^5.0.0"
   }
 }
