--- a/integrations/arcgis/tsconfig.json
+++ b/integrations/arcgis/tsconfig.json
@@ -3,11 +3,14 @@
     "target": "ESNext",
     "module": "nodenext",
     "moduleResolution": "nodenext",
+    "outDir": "dist",
     "skipLibCheck": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "verbatimModuleSyntax": false,
+    "declaration": true,
     "baseUrl": "./"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["dist", "node_modules"]
 }
