feat: update arcgis-function schedule to run at 2 AM
feat: enhance scraping-function to connect to database and update Cantábrico reservoirs

fix: correct mapping of embalse name in arcgis.mappers

chore: update package.json for scraping-cuenca-cantabrico to use dist files and add build scripts

fix: update import paths in console-runner and integration files to include .js extension

feat: add index.ts for scraping-cuenca-cantabrico to export integration functions

refactor: update scraping logic in business and mapper files for better readability

chore: update tsconfig.json for scraping-cuenca-cantabrico to use nodenext module resolution

chore: update package-lock.json to reflect dependency changes and versions

fix: update db-model exports to include .js extension

chore: update db package.json to include scraping-cuenca-cantabrico as a dependency

fix: change aguaActualSAIH type in embalses model to number

feat: add actualizarCuencaCantabricoEmbalses method to embalses repository for scraping and updating reservoirs

chore: update turbo.json to ensure proper build and type-check dependencies

--- a/integrations/scraping-cuenca-cantabrico/package.json
+++ b/integrations/scraping-cuenca-cantabrico/package.json
@@ -4,12 +4,21 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./dist/index.js"
   },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "start": "tsx --watch src/console-runner.ts"
+    "start": "tsx --watch src/console-runner.ts",
+    "build": "run-p clean type-check build:cantabrico",
+    "build:cantabrico": "tsc",
+    "clean": "rimraf dist",
+    "type-check": "tsc --noEmit --preserveWatchOutput"
   },
   "dependencies": {
     "db-model": "^1.0.0"
+  },
+  "devDependencies": {
+    "tsc-alias": "^1.8.16"
   }
 }
