--- a/integrations/scraping-cuenca-cantabrico/tsconfig.json
+++ b/integrations/scraping-cuenca-cantabrico/tsconfig.json
@@ -1,14 +1,23 @@
 {
     "compilerOptions": {
         "target": "ESNext",
-        "module": "nodenext",
-        "moduleResolution": "nodenext",
+        "module": "ESNext",
+        "moduleResolution": "bundler",
         "skipLibCheck": true,
         "isolatedModules": true,
         "esModuleInterop": true,
-        "declaration": true,
-        "outDir": "dist",
         "baseUrl": "./",
+        "paths": {
+            "@/*": [
+                "src/*"
+            ],
+            "@/api/*": [
+                "src/api/*"
+            ],
+            "@/scraper/*": [
+                "src/scraper/*"
+            ]
+        }
     },
     "include": [
         "src"
