--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/prompts": "^2.4.9",
     "arcgis": "*",
-    "prompts": "^2.4.2"
+    "prompts": "^2.4.2",
+    "scraping-cuenca-mediterranea": "*"
   }
 }
