--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "start": "next dev"
   },
   "dependencies": {
+    "@embalse-info/db": "*",
     "next": "^15.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
