--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Check TypeScript Types
         run: npx turbo type-check
 
-      - name: Build
-        run: npm run build
+      - name: Test
+        run: npm test
