--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Use Node.js 22
-        uses: actions/setup-node@v4
+      - name: Setup node version
+        uses: actions/setup-node@v3
         with:
-          node-version: "22"
-          cache: "npm"
+          node-version: 22.x
 
       - name: Install dependencies
         run: npm ci
