--- a/front/package.json
+++ b/front/package.json
@@ -7,9 +7,12 @@
     "start": "next dev"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "next": "^15.4.1",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
