--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -28,7 +28,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "postcss.config.js"  ],
   "exclude": [
     "node_modules"
   ]
