--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6"
+    "@types/react-dom": "^19.1.6",
+    "daisyui": "^5.5.5"
   }
 }
