--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -12,6 +12,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "postinstall": "node setup.js",
     "build": "run-p clean type-check build:db",
     "build:db": "tsc",
     "clean": "rimraf dist",
