--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "start": "next dev"
   },
   "dependencies": {
+    "@fontsource/nunito-sans": "^5.2.7",
     "@tailwindcss/postcss": "^4.1.17",
     "next": "^15.4.1",
     "postcss": "^8.5.6",
@@ -17,6 +18,8 @@
   "devDependencies": {
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "daisyui": "^5.5.5"
+    "daisyui": "^5.5.5",
+    "prettier": "^3.7.3",
+    "prettier-plugin-tailwindcss": "^0.7.2"
   }
 }
