--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,9 @@
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "mongodb": "^6.12.0",
+    "db-model": "file:../packages/db-model"
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
