--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,8 @@
     "@fontsource/nunito-sans": "^5.2.7",
     "@tailwindcss/postcss": "^4.1.17",
     "d3": "^7.9.0",
-    "next": "^15.4.1",
+    "downshift": "^9.2.0",
+    "next": "^16.1.6",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
