--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "cheerio": "^1.1.2",
+    "downshift": "^9.2.0",
     "playwright": "^1.54.2"
   }
 }
