--- a/integrations/scraping-cuenca-duero/package.json
+++ b/integrations/scraping-cuenca-duero/package.json
@@ -3,10 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "exports": "./src/index.ts",
+  "exports": {
+    ".": "./dist/index.js"
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "start": "tsx --watch ./src/console-runner.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "run-p clean type-check build:scraping-cuenca-duero",
+    "build:scraping-cuenca-duero": "tsc",
+    "clean": "rimraf dist",
+    "type-check": "tsc --noEmit --preserveWatchOutput"
   },
   "dependencies": {
     "axios": "^1.11.0",
