--- a/integrations/scraping-cuenca-duero/tsconfig.json
+++ b/integrations/scraping-cuenca-duero/tsconfig.json
@@ -1,20 +1,18 @@
 {
-	"compilerOptions": {
-		"target": "ES2020",
-		"module": "ESNext",
-		"moduleResolution": "bundler",
-		"skipLibCheck": true,
-		"isolatedModules": true,
-		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
-		"resolveJsonModule": true,
-		"outDir": "dist",
-		"baseUrl": "./",
-		"paths": {
-			"@/*": ["src/*"],
-			"@/api/*": ["src/api/*"],
-			"@/scraper/*": ["src/scraper/*"]
-		}
-	},
-	"include": ["src"]
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "outDir": "dist",
+    "skipLibCheck": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "verbatimModuleSyntax": false,
+    "declaration": true,
+    "baseUrl": "./"
+  },
+  "include": ["src/**/*"],
+  "exclude": ["dist", "node_modules"]
 }
