--- a/integrations/scraping-cuenca-duero/tsconfig.json
+++ b/integrations/scraping-cuenca-duero/tsconfig.json
@@ -1,14 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "outDir": "dist",
     "skipLibCheck": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
     "verbatimModuleSyntax": false,
     "declaration": true,
     "baseUrl": "./"
