--- a/integrations/scraping-cuenca-duero/package.json
+++ b/integrations/scraping-cuenca-duero/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
-    "cheerio": "^1.1.2"
+    "cheerio": "^1.1.2",
+    "db-model": "^1.0.0"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
