--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,7 @@
     "start": "func start",
     "clean": "rimraf dist",
     "type-check": "tsc --noEmit --preserveWatchOutput",
-    "build": "tsup",
+    "build": "tsc",
     "ci": "npm run clean && npm run type-check && npm run build",
     "watch": "tsc -w"
   },
@@ -16,8 +16,7 @@
     "@embalse-info/db": "*"
   },
   "devDependencies": {
-    "@types/node": "^20.x",
-    "tsup": "^8.5.1"
+    "@types/node": "^20.x"
   },
   "main": "dist/index.js"
 }
