--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -9,6 +9,7 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "declaration": true,
+    "declarationMap": false,
     "strict": false
   },
   "include": ["src/**/*"],
