--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "postinstall": "node setup.js",
     "build": "run-p clean type-check build:db",
-    "build:db": "tsc",
+    "build:db": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
     "prestart:db": "docker compose down --remove-orphans",
     "start:db": "docker compose up -d",
