--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/prompts": "^2.4.9",
     "arcgis": "*",
+    "db-model": "*",
     "prompts": "^2.4.2",
     "scraping-cuenca-mediterranea": "*"
   }
