--- a/integrations/scraping-cuenca-mediterranea/package.json
+++ b/integrations/scraping-cuenca-mediterranea/package.json
@@ -16,6 +16,8 @@
     "type-check": "tsc --noEmit --preserveWatchOutput"
   },
   "dependencies": {
+    "axios": "^1.7.0",
+    "cheerio": "^1.1.2",
     "db-model": "^1.0.0"
   }
 }
