--- a/front/.env.local
+++ b/front/.env.local
@@ -1,3 +1,5 @@
 MONGODB_CONNECTION_STRING=mongodb://localhost:27017/embalse-info
 
-CONTENT_ISLAND_ACCESS_TOKEN=c83b74b30d29761e3633d6b82eca019a
+
+# IMPORTANT: ask the team 
+CONTENT_ISLAND_ACCESS_TOKEN=VALUE
