--- a/.github/workflows/deploy-front.yml
+++ b/.github/workflows/deploy-front.yml
@@ -65,8 +65,19 @@ jobs:
 
       # Warm-up: force ISR regeneration so first real user gets data
       - name: Warm-up (force ISR regeneration)
+        env:
+          SITE_URL: https://info-embalse-front-prod-ecguababcfdsepga.westeurope-01.azurewebsites.net
+          REVALIDATION_SECRET: ${{ secrets.REVALIDATION_SECRET }}
         run: |
           echo "Waiting for App Service to start..."
-          sleep 30
-          curl -s -o /dev/null -w "%{http_code}" https://info-embalse-front-prod-ecguababcfdsepga.westeurope-01.azurewebsites.net/
-          echo " - Warm-up done, ISR regeneration triggered"
+          for i in $(seq 1 10); do
+            STATUS=$(curl -s -o /dev/null -w "%{http_code}" "$SITE_URL/" || true)
+            echo "  Attempt $i: HTTP $STATUS"
+            if [ "$STATUS" = "200" ]; then break; fi
+            sleep 10
+          done
+          echo "Triggering on-demand revalidation..."
+          curl -s "$SITE_URL/api/revalidate?secret=$REVALIDATION_SECRET"
+          sleep 2
+          curl -s -o /dev/null "$SITE_URL/"
+          echo "Warm-up complete"
