--- a/integrations/scraping-cuenca-mino-sil/package.json
+++ b/integrations/scraping-cuenca-mino-sil/package.json
@@ -10,6 +10,8 @@
     "start": "tsx --watch src/console-runner.ts"
   },
   "dependencies": {
+    "axios": "^1.7.0",
+    "cheerio": "^1.1.2",
     "db-model": "^1.0.0"
   }
 }
